--- a/style.css
+++ b/style.css
@@ -1,23 +1,51 @@
-
+body{
+    min-height: 100vh;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
 a {
     text-decoration: none;
 }
+.wrapper{
+    background-color: black;
+    width: 700px;
+    height: 700px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    justify-content: center;
+    align-self: center;   
+}
+.user-interface {
+    background-color: aliceblue;
+    width: 640px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+}
+.boxsize {
+    background-color: aliceblue;
+    width: 640px;
+}
 .canvas-container {
     background-color: aliceblue;
-    width: 960px;
-    height: 960px;
+    width: 640px;
+    height: 640px;
     border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
     padding: 0;  
+    align-self: center;
 }
-.canvas-blank, .{   
-    width: 58px;
-    height: 58px;
-    border: 1px solid black;
+.canvas-blank{   
+   background-color: azure;
     
 }
-
 .canvas-blank-fill{
     background-color: black;
 }
