--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body{
     min-height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -5,14 +6,11 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background: linear-gradient(#0a0235, #9198e5);
-    
+    background: linear-gradient(#0a0235, #9198e5);   
 }
 
 .wrapper{
-    /* background-color: black; */
     background: linear-gradient(#9198e5, #0a0235);
-
     width: auto;
     height: auto;
     border: 1px solid black;
@@ -21,6 +19,7 @@ body{
     padding: 0;
     justify-content: center;
     align-self: center;   
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 .user-interface, .box-size, .status-bar {
     background-color: aliceblue;
@@ -30,12 +29,16 @@ body{
     align-self: center;
     justify-content: center;
 }
-
+.status-bar {
+    font-weight: bold;
+    margin: 0;
+    background-color: rgb(9, 38, 64);
+    color: azure;
+}
 .canvas-container {
-    background-color: aliceblue;
+    background-color: rgb(18, 120, 209);
     margin: 0 0 5px;
     width: 640px;
-    /* height: 670px; */
     height: auto;
     min-height: 640px;
     border: 1px solid black;
@@ -45,11 +48,11 @@ body{
     align-self: center;
 }
 .canvas-blank{   
-   background-color: azure;
-    
+   background-color: azure;   
 }
 .canvas-blank-fill{
-    background-color: black;
+    background-color: var( --random-fill-color);  
+    opacity: 0.1;
 }
 button{
     font-size: medium;
@@ -66,7 +69,7 @@ button{
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
- /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+ text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
   box-shadow: 0 0 20px #eee;
   border-radius: 10px;
 }
